--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<div class="logo"><a href="#">This is a conflicting change</a></div>
+				<div class="logo"><a href="#">Txxx</a></div>
 			</header>
 
 		<!-- Main -->
