Revert "Update index.html"

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<div class="logo"><a href="#">Revert this</a></div>
+				<div class="logo"><a href="#">!!!</a></div>
 			</header>
 
 		<!-- Main -->
